fix: bg color of #menuPuller on mobile

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           UoM Blackboard theme
-@version        20240103.01.00
+@version        20240103.01.01
 @namespace      userstyles.world/user/adil192
 @description    Themes the blackboard UoM website to look more modern and use a consistent colour scheme.
 @author         adil192
@@ -320,6 +320,16 @@
   }
   #puller.pullcollapsed a {
     background-color: #9a5dbe;
+  }
+  @media only screen and (min-width: 0px) and (max-width: 736px) {
+    #puller.pullcollapsed a {
+      background-color: transparent;
+    }
+  }
+  @media only screen and (min-width: 737px) and (max-width: 1037px) {
+    #puller.pullcollapsed a {
+      background-color: transparent;
+    }
   }
   #containerdiv {
     border: none;
